[package]
name = "rust-ecs-game"
version = "0.1.0"
authors = ["Masahiro Yoshida <mypianoplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.quicksilver]
version = "0.3"

[dependencies]
log = "0.4"
web_logger = "0.2"